[gd_scene load_steps=11 format=3 uid="uid://burowuna5467e"]

[ext_resource type="Script" path="res://Script/Entity/PlayerControl/PlayerControl.gd" id="1_5eoj7"]
[ext_resource type="Script" path="res://Script/Entity/PlayerControl/Camera/Camera.gd" id="2_qdesf"]
[ext_resource type="Script" path="res://Script/Component/UnitSelect/UnitSelect.gd" id="3_xba4j"]
[ext_resource type="Script" path="res://Script/Component/RectIntersectQuery/RectIntersectQuery.gd" id="4_8ley7"]
[ext_resource type="Script" path="res://Script/Component/BuildingManager/BuildingManager.gd" id="5_0iqoi"]
[ext_resource type="Script" path="res://Script/Component/StateMachine/StateMachine.gd" id="6_cf4nd"]
[ext_resource type="Script" path="res://Script/Entity/PlayerControl/PlayerStateMachine/StateSelecting.gd" id="7_eloj6"]
[ext_resource type="Script" path="res://Script/Entity/PlayerControl/PlayerStateMachine/StateCommanding.gd" id="8_4anlu"]
[ext_resource type="Script" path="res://Script/Entity/PlayerControl/PlayerStateMachine/StatePlayerIdle.gd" id="9_2r51o"]
[ext_resource type="Script" path="res://Script/Entity/PlayerControl/PlayerStateMachine/StateBuilding.gd" id="10_ucl4u"]

[node name="PlayerControl" type="Node2D"]
script = ExtResource("1_5eoj7")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_qdesf")

[node name="UnitSelect" type="Node" parent="."]
script = ExtResource("3_xba4j")

[node name="RectIntersectQuery" type="Node2D" parent="."]
script = ExtResource("4_8ley7")

[node name="BuildingManager" type="Node" parent="."]
script = ExtResource("5_0iqoi")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_cf4nd")
initial_state = NodePath("StatePlayerIdle")

[node name="StateSelecting" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_eloj6")

[node name="StateCommanding" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_4anlu")

[node name="StatePlayerIdle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_2r51o")

[node name="StateBuilding" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ucl4u")
